Initial commit of ImportCommand implementation. First iteration will require all parameters to be supplied at command prompt.

--- a/src/SIM.Client/SIM.Client.csproj
+++ b/src/SIM.Client/SIM.Client.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Commands\BrowseCommandFacade.cs" />
     <Compile Include="Commands\ConfigCommandFacade.cs" />
     <Compile Include="Commands\DeleteCommandFacade.cs" />
+    <Compile Include="Commands\ImportCommandFacade.cs" />
     <Compile Include="Commands\InstallCommandFacade.cs" />
     <Compile Include="Commands\InstallModuleCommandFacade.cs" />
     <Compile Include="Commands\ListCommandFacade.cs" />
