--- a/src/SIM.Core/SIM.Core.csproj
+++ b/src/SIM.Core/SIM.Core.csproj
@@ -111,6 +111,7 @@
   <ItemGroup>
     <Compile Include="Commands\BrowseCommand.cs" />
     <Compile Include="Commands\ConfigCommand.cs" />
+    <Compile Include="Commands\ImportCommand.cs" />
     <Compile Include="Commands\LoginCommand.cs" />
     <Compile Include="Commands\RepositoryCommand.cs" />
     <Compile Include="Commands\RepositoryCommandResult.cs" />
